--- a/style.css
+++ b/style.css
@@ -47,6 +47,160 @@ table {
 	border-spacing: 0;
 }
 
-/* html */
-body {
+/* fonts */
+@font-face {
+  font-family: 'Shentox';
+  src: url('./fonts/Shentox.ttf');
+}
+@font-face {
+  font-family: 'Shentox Bold';
+  src: url('./fonts/Shentox\ Bold.ttf');
+}
+@font-face {
+  font-family: 'HK Grotesk';
+  src: url('./fonts/HKGrotesk-Regular.ttf');
+}
+@font-face {
+  font-family: 'Avalon Bold';
+  src: url('./fonts/Avalon_Bold.ttf');
+}
+
+/* header */
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-family: 'Shentox', sans-serif;
+    width: 100%;
+    background-color: #f7f8f8;
+}
+.headerLogo {
+    width: 4.125rem;
+    height: 1.4rem;
+}
+nav ul {
+    display: flex;
+    align-items: center;
+}
+nav ul li {
+    letter-spacing: .08em;
+    text-transform: uppercase;
+    font-size: 0.875rem;
+    padding: 0 .75rem;
+    line-height: 42px;
+    color: #101010;
+}
+.currentPage {
+    color: #000;
+    background-color: #fff;
+}
+.navMoreDiv {
+    display: flex;
+    align-items: center;
+}
+/* main header */
+.mainHeader {
+    background-color: #fad832;
+    position: sticky;
+    box-shadow: 0 16px 48px rgb(0 0 0 / 15%);
+    padding: 10px 0;
+    display: flex;
+}
+.mainHeader p {
+    font-family: 'HK Grotesk', sans-serif;
+    line-height: 1.75;
+    padding-left: 1.5rem;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-size: 13px;
+}
+/* main heading */
+.mainHeading {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 2rem;
+    padding: 2% 0;
+    margin: 2rem 0;
+}
+.headingLogo {
+    width: 12.5rem;
+}
+.headingSlogan {
+    font-family: 'HK Grotesk', sans-serif;
+    color: #505666;
+    font-size: 2rem;
+}
+/* stories grid */
+.stories {
+    max-width: 100rem;
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    grid-gap: .5rem;
+    grid-auto-flow: dense;
+    padding: 0 2rem;
+    height: 632px;
+}
+.storiesArticle {
+    position: relative;
+}
+.storiesContent {
+    display: block;
+    background-color: transparent;
+    box-sizing: border-box;
+    padding: 24px;
+    position: absolute;
+    bottom: 0;
+}
+.stories article {
+    color: #fff;
+}
+.storiesTag {
+    margin-bottom: .25rem;
+    font-size: .75rem;
+}
+.storiesTitle {
+    font-family: 'Avalon Bold', sans-serif;
+    font-size: 1.25rem;
+}
+.storiesDate {
+    font-family: 'Avalon Bold', sans-serif;
+    font-size: 1.25rem;
+}
+.storiesButton {
+    border: none;
+    border-radius: 1.5rem;
+    padding: 0 1.5rem;
+    background-color: transparent;
+    margin-top: 1rem;
+    box-shadow: inset 0 0 0 1px #fff;
+    line-height: inherit;
+}
+/* stories items */
+.mainStory {
+    grid-column: span 4;
+    grid-row: span 3;
+    background: linear-gradient(to bottom, rgba(0,0,0,0) 20%, rgba(0,0,0,1)), url('https://img-cdn.tnwcdn.com/image?fit=600%2C300&url=https%3A%2F%2Fs3.amazonaws.com%2Fevents.tnw%2Fhardfork-2018%2Fuploads%2Fvisuals%2Fwordle.jpeg&signature=89c08d2a6c4d8364db9594abd1741903');
+}
+.googleStory {
+    grid-column: span 2;
+    grid-row: span 2;
+    background: linear-gradient(to bottom, rgba(0,0,0,0) 20%, rgba(0,0,0,1)), url('https://img-cdn.tnwcdn.com/image?fit=600%2C300&url=https%3A%2F%2Fs3.amazonaws.com%2Fevents.tnw%2Fhardfork-2018%2Fuploads%2Fvisuals%2Ftime-crystals.jpeg&signature=cefd6ecad47425c742b8b55e37a29ac7');
+}
+.websiteStory {
+    grid-column: span 2;
+    grid-row: span 2;
+    background: linear-gradient(to bottom, rgba(0,0,0,0) 20%, rgba(0,0,0,1)), url('http://web.archive.org/web/20220116114919im_/https://img-cdn.tnwcdn.com/image?fit=600%2C300&url=https%3A%2F%2Fs3.amazonaws.com%2Fevents.tnw%2Fhardfork-2018%2Fuploads%2Fvisuals%2Fapp_2022-01-14-112007_ainq.jpeg&signature=945d70bd0f9427cda65107e9cd57c4d4');
+}
+.storiesConference {
+    grid-column: span 4;
+    grid-row: span 2;
+    background: linear-gradient(to bottom, rgba(0,0,0,0) 20%, rgba(0,0,0,1)), url('https://s3.amazonaws.com/events.tnw/hardfork-2018/uploads/visuals/home-header_advert-tnw2021-03.jpg');
+}
+.spotifyStory {
+    grid-column: span 4;
+    grid-row: span 3;
+    background: linear-gradient(to bottom, rgba(0,0,0,0) 20%, rgba(0,0,0,1)), url('https://img-cdn.tnwcdn.com/image?fit=1280%2C720&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2022%2F01%2FSpotify-Hifi.jpg&signature=948317eefbed07b0fcebe7527beaa6ec');
 }
