--- a/style.css
+++ b/style.css
@@ -345,6 +345,64 @@ nav ul li {
     font-size: 0.75rem;
     color: #ba0b91;
 }
+/* explore channels */
+.exploreChannels {
+    padding: 7rem 2rem;
+    background-color: #f7f8f8;
+}
+.exploreHeading {
+    font-family: 'Avalon Bold', sans-serif;
+    font-size: 2.5rem;
+    margin-bottom: 4rem;
+    letter-spacing: -.025em;
+}
+.pluggedCard {
+    background-image: url('https://img-cdn.tnwcdn.com/image?fit=260%2C235&url=https%3A%2F%2Fnext.tnwcdn.com%2Fassets%2Fnext%2Fimg%2Fbackdrop-s-plugged.jpg&signature=4423a77a45ff6281a089424a8dd0bc24');
+}
+.neuralCard {
+    background-image: url('https://img-cdn.tnwcdn.com/image?fit=260%2C235&url=https%3A%2F%2Fnext.tnwcdn.com%2Fassets%2Fnext%2Fimg%2Fbackdrop-s-neural.jpg&signature=7b20700b0f58af3860449664ae1a5e68');
+}
+.shiftCard {
+    background-image: url('https://img-cdn.tnwcdn.com/image?fit=260%2C235&url=https%3A%2F%2Fnext.tnwcdn.com%2Fassets%2Fnext%2Fimg%2Fbackdrop-s-shift.jpg&signature=1d3ef28f5220f870b7e289810caa80a3');
+}
+.growthCard {
+    background-image: url('https://img-cdn.tnwcdn.com/image?fit=260%2C235&url=https%3A%2F%2Fnext.tnwcdn.com%2Fassets%2Fnext%2Fimg%2Fbackdrop-s-growth-quarters.jpg&signature=72ccfd9e92f942be8ace3526d0dc3aab');
+}
+.forkCard {
+    background-image: url('https://img-cdn.tnwcdn.com/image?fit=260%2C235&url=https%3A%2F%2Fnext.tnwcdn.com%2Fassets%2Fnext%2Fimg%2Fbackdrop-s-hardfork.jpg&signature=77d9941cfc302cb2e25c39ab3043fa7b');
+}
+.genreCards {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-gap: 1rem;
+    overflow: hidden;
+}
+.genreCard {
+    min-width: 11.5rem;
+    min-height: 12rem;
+    text-align: center;
+    padding: 2rem 1rem;
+    background-size: cover;
+    background-position: 50%;
+    height: 12rem;
+    overflow: hidden;
+    cursor: pointer;
+}
+.genreTag {
+    width: 120px;
+    max-width: 100%;
+    display: flex;
+    align-items: center;
+    margin: auto;
+    margin-bottom: 5rem;
+    height: 2.5rem;
+}
+.genreInfo {
+    font-family: 'HK Grotesk Bold', sans-serif;
+    color: #fff;
+    line-height: 1.5;
+    font-size: 1.1rem;
+}
 
 @media (max-width:767px) {
     .stories {
