--- a/style.css
+++ b/style.css
@@ -403,6 +403,96 @@ nav ul li {
     line-height: 1.5;
     font-size: 1.1rem;
 }
+/* newsletter */
+.newsletter {
+    background: url('https://next.tnwcdn.com/assets/next/img/spacesbg.png'), #000;
+    background-attachment: fixed;
+    background-position: 50%;
+    background-size: cover;
+    color: #fff;
+    padding: 4rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.newsletterHeading {
+    font-size: 3rem;
+    font-family: 'Avalon Bold';
+    letter-spacing: -.025em;
+    margin-bottom: 1rem;
+}
+.newsletterPara {
+    font-family: 'HK Grotesk', sans-serif;
+    letter-spacing: -0.025rem;
+    margin-bottom: 1rem;
+    text-align: center;
+}
+.newsletterForm {
+    display: flex;
+    margin-bottom: 1rem;
+    border-radius: 0.25rem;
+    box-shadow: 0 4px 24px rgb(0 0 0 / 25%);
+    width: 100%;
+    max-width: 45rem;
+}
+.inputDiv {
+    display: flex;
+    align-items: center;
+    background-color: #fff;
+    border-bottom-left-radius: 0.25rem;
+    border-top-left-radius: 0.25rem;
+    width: 100%;
+}
+.newsletterMail {
+    color: #a7aab2;
+    opacity: 0.5;
+    margin-left: 0.75rem;
+}
+.newsletterInput {
+    color: #a7aab2;
+    margin: 0 .75rem;
+    border: none;
+    padding: .75rem;
+    opacity: 0.5;
+    font-size: 1rem;
+}
+.newsletterButton {
+    background-color: #c09;
+    color: #fff;
+    font-family: 'HK Grotesk Bold', sans-serif;
+    padding: .75rem;
+    box-sizing: border-box;
+    border: none;
+    border-bottom-right-radius: 0.25rem;
+    border-top-right-radius: 0.25rem;
+    font-size: 1rem;
+    text-transform: uppercase;
+}
+.newsletterShare {
+    display: flex;
+    margin-top: 1rem;
+    margin-bottom: .5rem;
+}
+.shareIcon {
+    width: 1.5rem;
+    height: 1.5rem;
+    border-radius: 0.25rem;
+    margin-right: 1rem;
+}
+/* watch videos */
+.watchVideos {
+
+}
+.watchHeading {
+    font-family: 'Avalon Bold', sans-serif;
+    margin-bottom: 3rem!important;
+    font-size: 2.5rem!important;
+    letter-spacing: -0.025em;
+}
+.mainVideoContext {
+    
+}
 
 @media (max-width:767px) {
     .stories {
@@ -465,6 +555,10 @@ nav ul li {
     .allNewsForward {
         display: none!important;
     }
+    /* newsletter */
+    .newsletterHeading {
+        font-size: 1.4rem;
+    }
 }
 @media (min-width:768px) {
     .stories {
@@ -507,6 +601,10 @@ nav ul li {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-gap: 2rem;
+    }
+    /* newsletter */
+    .newsletterHeading {
+        font-size: 2rem;
     }
 }
 @media (min-width: 801px) {
@@ -600,6 +698,10 @@ nav ul li {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         grid-gap: 2rem;
+    }
+    /* explore channels */
+    .newsletterHeading {
+        font-size: 2rem;
     }
 }   
 @media (min-width:1280px) {
